# bzlmodRio-rules_bazelrio

./: .bazelrc  MODULE.bazel  WORKSPACE  halsim_defs.bzl  java_rules.bzl  nonbzlmod_setup.bzl  robot_rules.bzl
.github/workflows/: build.yml  lint.yml  publish.yml
conditions/: BUILD.bazel
deploy/: BUILD
deploy/src/main/java/org/bazelrio/deploy/: BUILD  BaseDeployer.java  Deploy.java  Deployer.java  DryRunDeployer.java  DryRunResponses.java  Main.java  SshDeployer.java  Versions.java
generate/: BUILD.bazel  MODULE.bazel  WORKSPACE  generate.py  get_group.py  get_version.py  module_config.jinja2  publish.py
generate/templates/: MODULE.bazel.jinja2  WORKSPACE.jinja2
generate/templates/tests/: MODULE.bazel.jinja2  WORKSPACE.jinja2
jnidebugger/src/main/java/org/bazelrio/jnidebugger/: BUILD.bazel  JniDebugger.java
private/: get_dynamic_deps.bzl
tests/: .bazelrc-java  MODULE.bazel  WORKSPACE
tests/robot-cpp/: BUILD.bazel  robot.cpp
tests/robot-java/: BUILD.bazel  Robot.java
