bazel_dep(name = "rules_bazelrio", version = "")
bazel_dep(name = "bzlmodrio-allwpilib", version = "2024.1.1-beta-1")
bazel_dep(name = "rules_cc", version = "0.0.8")
bazel_dep(name = "rules_wpi_styleguide", version = "1.0.0")
bazel_dep(name = "rules_checkstyle", version = "10.1")
bazel_dep(name = "rules_pmd", version = "6.43.0")
bazel_dep(name = "rules_spotless", version = "2.34.0")
bazel_dep(name = "rules_wpiformat", version = "2022.30")

local_path_override(
    module_name = "rules_bazelrio",
    path = "..",
)
