load("@rules_bazelrio//:robot_rules.bzl", "robot_java_binary")

robot_java_binary(
    name = "robot",
    srcs = glob(["*.java"]),
    dry_run = True,
    halsim_deps = ["@bzlmodrio-allwpilib//libraries/cpp/halsim_gui"],
    main_class = "Robot",
    team_number = 9999,
    verbose = True,
    deps = [
        "@bzlmodrio-allwpilib//libraries/java/wpilibj",
    ],
)
